modify image URL

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</p>
 			<p>
 				这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 换行了<br /> 
-				这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 这是一个很长的段落<a href="http://ife.baidu.com" title="百度前端学院">这里有一个链接链接到http://ife.baidu.com</a>个很长的段落个很长的段落个很长的段落个很长的段落个很长的段落个很长的段落个很长的段落<br /><img src="fig1.jpg" alt="图片下载失败"><br />
+				这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 这是一个很长的段落<a href="http://ife.baidu.com" title="百度前端学院">这里有一个链接链接到http://ife.baidu.com</a>个很长的段落个很长的段落个很长的段落个很长的段落个很长的段落个很长的段落个很长的段落<br /><img src="http://chuantu.biz/t2/33/1458732578x1822613191.jpg" alt="图片下载失败"><br />
 				个很长的段落个很长的段落个很长个很长的段落个很长的段落个很长<a href="http://ife.baidu.com" title="百度前端学院" target="_blank">这里有一个链接打开新窗口链接到http://ife.baidu.com</a>个很长的段落个很长的段落个很长个很长的段落个很长的段落个很长
 			</p>		
 		</p>
@@ -32,7 +32,7 @@
 			</p>
 			<p>
 				这是一个很长的段落这是一个很长的段落这是一个很长的段落这是一个很长的段落这是一个很长的段落这是一个很长的段落这是一个很长的段落这是一个很长的段落<a href="http://ife.baidu.com" title="百度前端学院">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长的段落这是一个很长的段落这是一个很长的段落<br />
-				<img src="fig1.jpg" alt="图片下载失败"></br >
+				<img src="http://chuantu.biz/t2/33/1458732578x1822613191.jpg" alt="图片下载失败"></br >
 				<ul>
 					<li>列表项目一</li>
 					<li>列表项目二</li>
@@ -45,23 +45,23 @@
 		<h1><strong><font face="黑体">图片</font></strong></h1>
 		<p>
 			好看的图片<br />
-			<img src="fig1.jpg" alt="图片下载失败"><br />
+			<img src="http://chuantu.biz/t2/33/1458732578x1822613191.jpg" alt="图片下载失败"><br />
 		</p>
 		<p>
 			好看的图片<br />
-			<img src="fig1.jpg" alt="图片下载失败"><br />
+			<img src="http://chuantu.biz/t2/33/1458732578x1822613191.jpg" alt="图片下载失败"><br />
 		</p>
 		<p>
 			好看的图片<br />
-			<img src="fig1.jpg" alt="图片下载失败"><br />
+			<img src="http://chuantu.biz/t2/33/1458732578x1822613191.jpg" alt="图片下载失败"><br />
 		</p>
 		<p>
 			好看的图片<br />
-			<img src="fig1.jpg" alt="图片下载失败"><br />
+			<img src="http://chuantu.biz/t2/33/1458732578x1822613191.jpg" alt="图片下载失败"><br />
 		</p>
 		<p>
 			好看的图片<br />
-			<img src="fig1.jpg" alt="图片下载失败"><br />
+			<img src="http://chuantu.biz/t2/33/1458732578x1822613191.jpg" alt="图片下载失败"><br />
 		</p>
 	</div>
 	<div id="最后一篇文章">
