修改readme,占坑完成S1Task6中,完成S2Task16

--- a/S1Task6/index.html
+++ b/S1Task6/index.html
@@ -3,8 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <title>百度IFE_Task6</title>
+    <link href="main.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-    占坑,完成任务中...
+    <div class="newspaper">
+        <header>
+            <div class="top_background">
+                 <span>ife.baidu.com</span>
+            </div>
+                <span class="top_time">2016.04</span>
+        </header>
+        <div class="middle">
+            <div class="middle-left">
+                <img src="img/1.1.png">
+                <div class="middle-left-green"></div>
+                <div class="middle-left-red"></div>
+            </div>
+            <div class="middle-right">
+                <div class="right-about"><span style="font-size: 28px; font-weight: bold;">A</span>BOUT</div>
+                <div class="right-technology">TECHNOLOGY</div>
+                <div class="right-description">
+                    About technologe about technologe<br>
+                    about technologe
+                </div>
+                <div class="right-700">700</div>
+                <div class="right-32">3.2</div>
+                <div class="right-css">css</div>
+                <div class="right-cssss">cssssccsccscssc</div>
+            </div>
+        </div>
+        <div class="second_part">
+            <div class="what">
+                <span>What</span><br>
+                <div class="text">
+                    前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前端前端前端前端
+                </div>
+            </div>
+            <div>
+                占坑完成任务中......
+            </div>
+        </div>
+    </div>
 </body>
 </html>
