--- a/S1Task4/index.html
+++ b/S1Task4/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-    <meta charset="UTF-8">
+    <meta charset='UTF-8'>
     <title>百度IFE_2016 S1Task4</title>
-    <link href="main.css" rel="stylesheet" type="text/css"/>
+    <link href='main.css' rel='stylesheet' type='text/css'/>
 </head>
 <body>
-    <div class="main_box">
-        <div class="circle_1"></div>
-        <div class="circle_2"></div>
+    <div class='main_box'>
+        <div class='circle_1'></div>
+        <div class='circle_2'></div>
     </div>
 </body>
 </html>
