--- a/S1Task5/index.html
+++ b/S1Task5/index.html
@@ -1,83 +1,83 @@
 <!DOCTYPE>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link href="main.css" rel="stylesheet" type="text/css" />
+<meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
+	<link href='main.css' rel='stylesheet' type='text/css' />
 	<title>百度IFE_TASK1</title>
 </head>
 <body>
-	<header class="top-header">
-			<img src="baidu-logo.png" style="margin-top:5px;" alt="Baidu">
-			<ul class="top-link">
-				<li><a href="#1" title="导航链接一" target="_blank">● 导航链接一</a></li>
-				<li><a href="#2" title="导航链接二" target="_blank">● 导航链接二</a></li>
-				<li><a href="#3" title="导航链接三" target="_blank">● 导航链接三</a></li>
-				<li><a href="#4" title="导航链接四" target="_blank">● 导航链接四</a></li>
+	<header class='top-header'>
+			<img src='baidu-logo.png' style='margin-top:5px;' alt='Baidu'>
+			<ul class='top-link'>
+				<li><a href='#1' title='导航链接一' target='_blank'>● 导航链接一</a></li>
+				<li><a href='#2' title='导航链接二' target='_blank'>● 导航链接二</a></li>
+				<li><a href='#3' title='导航链接三' target='_blank'>● 导航链接三</a></li>
+				<li><a href='#4' title='导航链接四' target='_blank'>● 导航链接四</a></li>
 			</ul>
 	</header>
-	<div class="right_box">
-		<article class="siderbar">
-			<h2 style="border-left: 4px solid #ccc; padding-left: 5px;">这里以后是一个侧栏</h2>
-			<form action="save.php" method="post" >
-				<table class="submit_form">
+	<div class='right_box'>
+		<article class='siderbar'>
+			<h2 style='border-left: 4px solid #ccc; padding-left: 5px;'>这里以后是一个侧栏</h2>
+			<form action='save.php' method='post' >
+				<table class='submit_form'>
 					<tr>
-						<td><div class="inform_group">请输入邮箱地址</div></td>
-						<td><input type="text" class="group_value" name="email" placeholder="请输入邮箱地址"/><br/></td>
+						<td><div class='inform_group'>请输入邮箱地址</div></td>
+						<td><input type='text' class='group_value' name='email' placeholder='请输入邮箱地址'/><br/></td>
 					</tr>
 					<tr>
 						<td></td>
-						<td><span class="inform_tip">邮箱地址请按照格式输入</span><br></td>
+						<td><span class='inform_tip'>邮箱地址请按照格式输入</span><br></td>
 					</tr>
 					<tr>
-						<td><div class="inform_group">请输入密码</div></td>
-						<td><input type="password" class="group_value" name="password" placeholder="请输入密码"/><br></td>
+						<td><div class='inform_group'>请输入密码</div></td>
+						<td><input type='password' class='group_value' name='password' placeholder='请输入密码'/><br></td>
 					</tr>
 					<tr>
-						<td><div class="inform_group">请重复输入密码</div></td>
-						<td><input type="password" class="group_value" name="repassword" placeholder="请再次输入密码"/><br/></td>
+						<td><div class='inform_group'>请重复输入密码</div></td>
+						<td><input type='password' class='group_value' name='repassword' placeholder='请再次输入密码'/><br/></td>
 					</tr>
 					<tr>
 						<td></td>
-						<td><span class="inform_tip">密码请为6-16位英文数字</span><br></td>
+						<td><span class='inform_tip'>密码请为6-16位英文数字</span><br></td>
 					</tr>
 					<tr>
-						<td> <div class="inform_group">性别</div></td>
+						<td> <div class='inform_group'>性别</div></td>
 						<td>
-							<input type="radio" class="sex_select" value="1" name="sex"/>男
-							<input type="radio" class="sex_select" value="0" name="sex"/>女
+							<input type='radio' class='sex_select' value='1' name='sex'/>男
+							<input type='radio' class='sex_select' value='0' name='sex'/>女
 						</td>
 					</tr>
 					<tr>
-						<td><div class="inform_group">城市</div></td>
+						<td><div class='inform_group'>城市</div></td>
 						<td>
-							<select name="city">
-								<option value="beijing" selected="selected">北京</option>
-								<option value="shanghai">上海</option>
-								<option value="guangzhou">广州</option>
-								<option value="shenzhen">深圳</option>
+							<select name='city'>
+								<option value='beijing' selected='selected'>北京</option>
+								<option value='shanghai'>上海</option>
+								<option value='guangzhou'>广州</option>
+								<option value='shenzhen'>深圳</option>
 							</select><br>
 						</td>
 					</tr>
 					<tr>
-						<td><div class="inform_group">爱好</div></td>
+						<td><div class='inform_group'>爱好</div></td>
 						<td>
-							<input type="checkbox" value="sport" name="interest"/>运动
-							<input type="checkbox" value="art" name="interest"/>艺术
-							<input type="checkbox" value="science" name="interest"/>科学
+							<input type='checkbox' value='sport' name='interest'/>运动
+							<input type='checkbox' value='art' name='interest'/>艺术
+							<input type='checkbox' value='science' name='interest'/>科学
 						</td>
 					</tr>
 					<tr>
-						<td><div class="inform_group">个人说明</div></td>
-						<td><textarea rows="5" cols="20" placeholder="这是一个多行输入框,请输入您的个人描述"></textarea></td>
+						<td><div class='inform_group'>个人说明</div></td>
+						<td><textarea rows='5' cols='20' placeholder='这是一个多行输入框,请输入您的个人描述'></textarea></td>
 					</tr>
 				</table>
-				<input type="submit" value="确定" name="submit" class="button"/><br/>
-				<input type="reset" value="重置" name="reset" class="button"/>
+				<input type='submit' value='确定' name='submit' class='button'/><br/>
+				<input type='reset' value='重置' name='reset' class='button'/>
 			</form>
 		</article>
 	</div>
-	<div class="left_box">
-		<article class="passage">
+	<div class='left_box'>
+		<article class='passage'>
 			<header>
 				<h2>文章一级标题</h2>
 				<h3>文章二级标题</h3>
@@ -86,86 +86,86 @@
 			<p>
 				这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 换行了<br/>
 				这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 这是一个很长的段落 这是一个很长的段落
-				<a class="article-link" href="http://ife.baidu.com" title="百度前端学院">这里有一个链接链接到http://ife.baidu.com</a>
+				<a class='article-link' href='http://ife.baidu.com' title='百度前端学院'>这里有一个链接链接到http://ife.baidu.com</a>
 				个很长的段落个很长的段落个很长的段落个很长的段落个很长的段落个很长的段落个很长的段落<br/>
-				<img src="http://chuantu.biz/t2/33/1458732578x1822613191.jpg" width="50%" alt="图片下载失败"><br/>
+				<img src='http://chuantu.biz/t2/33/1458732578x1822613191.jpg' width='50%' alt='图片下载失败'><br/>
 				个很长的段落个很长的段落个很长个很长的段落个很长的段落个很长
-				<a class="article-link" href="http://ife.baidu.com" title="百度前端学院" target="_blank">
+				<a class='article-link' href='http://ife.baidu.com' title='百度前端学院' target='_blank'>
 					这里有一个链接打开新窗口链接到http://ife.baidu.com</a>个很长的段落个很长的段落个很长个很长的段落个很长的段落个很长
 			</p>
 		</article>
-		<article class="passage">
+		<article class='passage'>
 			<header>
 				<h2>另一篇文章一级标题</h2>
 				<h3>文章二级标题</h3>
 				<h4>文章作者 文章发布时间</h4>
 			</header>
 			<p>
-				这是一个很长的段落这是一个很长的段落这是一个很长的段落这是一个很长的段落这是一个很长的段落这是一个很长的段落这是一个很长的段落这是一个很长的段落<a class="article-link" href="http://ife.baidu.com" title="百度前端学院">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长的段落这是一个很长的段落这是一个很长的段落<br/>
-				<img src="http://chuantu.biz/t2/33/1458732578x1822613191.jpg" width="50%" alt="图片下载失败"><br/>
+				这是一个很长的段落这是一个很长的段落这是一个很长的段落这是一个很长的段落这是一个很长的段落这是一个很长的段落这是一个很长的段落这是一个很长的段落<a class='article-link' href='http://ife.baidu.com' title='百度前端学院'>这里有一个链接链接到http://ife.baidu.com</a>这是一个很长的段落这是一个很长的段落这是一个很长的段落<br/>
+				<img src='http://chuantu.biz/t2/33/1458732578x1822613191.jpg' width='50%' alt='图片下载失败'><br/>
 			</p>
-			<ul class="list_project">
+			<ul class='list_project'>
 				<li>列表项目一</li>
 				<li>列表项目二</li>
 				<li>列表项目三</li>
 			</ul>
 		</article>
 
-		<article class="passage" >
+		<article class='passage' >
 			<h2>图片</h2>
-			<figure class="picture-box">
+			<figure class='picture-box'>
 				<span>好看的图片</span>
-				<img src="http://chuantu.biz/t2/33/1458732578x1822613191.jpg" class="photo" alt="图片下载失败"><br/>
+				<img src='http://chuantu.biz/t2/33/1458732578x1822613191.jpg' class='photo' alt='图片下载失败'><br/>
 			</figure>
-			<figure class="picture-box">
+			<figure class='picture-box'>
 				好看的图片<br/>
-				<img src="http://chuantu.biz/t2/33/1458732578x1822613191.jpg" class="photo" alt="图片下载失败"><br/>
+				<img src='http://chuantu.biz/t2/33/1458732578x1822613191.jpg' class='photo' alt='图片下载失败'><br/>
 			</figure>
-			<figure class="picture-box">
+			<figure class='picture-box'>
 				好看的图片<br/>
-				<img src="http://chuantu.biz/t2/33/1458732578x1822613191.jpg" class="photo" alt="图片下载失败"><br/>
+				<img src='http://chuantu.biz/t2/33/1458732578x1822613191.jpg' class='photo' alt='图片下载失败'><br/>
 			</figure>
-			<figure class="picture-box">
+			<figure class='picture-box'>
 				好看的图片<br/>
-				<img src="http://chuantu.biz/t2/33/1458732578x1822613191.jpg" class="photo" alt="图片下载失败"><br/>
+				<img src='http://chuantu.biz/t2/33/1458732578x1822613191.jpg' class='photo' alt='图片下载失败'><br/>
 			</figure>
-			<figure class="picture-box">
+			<figure class='picture-box'>
 				好看的图片<br/>
-				<img src="http://chuantu.biz/t2/33/1458732578x1822613191.jpg" class="photo" alt="图片下载失败"><br/>
+				<img src='http://chuantu.biz/t2/33/1458732578x1822613191.jpg' class='photo' alt='图片下载失败'><br/>
 			</figure>
-			<figure class="picture-box">
+			<figure class='picture-box'>
 				好看的图片<br/>
-				<img src="http://chuantu.biz/t2/33/1458732578x1822613191.jpg" class="photo" alt="图片下载失败"><br/>
+				<img src='http://chuantu.biz/t2/33/1458732578x1822613191.jpg' class='photo' alt='图片下载失败'><br/>
 			</figure>
-			<figure class="picture-box">
+			<figure class='picture-box'>
 				好看的图片<br/>
-				<img src="http://chuantu.biz/t2/33/1458732578x1822613191.jpg" class="photo" alt="图片下载失败"><br/>
+				<img src='http://chuantu.biz/t2/33/1458732578x1822613191.jpg' class='photo' alt='图片下载失败'><br/>
 			</figure>
-			<figure class="picture-box">
+			<figure class='picture-box'>
 				好看的图片<br/>
-				<img src="http://chuantu.biz/t2/33/1458732578x1822613191.jpg" class="photo" alt="图片下载失败"><br/>
+				<img src='http://chuantu.biz/t2/33/1458732578x1822613191.jpg' class='photo' alt='图片下载失败'><br/>
 			</figure>
-			<figure class="picture-box">
+			<figure class='picture-box'>
 				好看的图片<br/>
-				<img src="http://chuantu.biz/t2/33/1458732578x1822613191.jpg" class="photo" alt="图片下载失败"><br/>
+				<img src='http://chuantu.biz/t2/33/1458732578x1822613191.jpg' class='photo' alt='图片下载失败'><br/>
 			</figure>
-			<figure class="picture-box">
+			<figure class='picture-box'>
 				好看的图片<br/>
-				<img src="http://chuantu.biz/t2/33/1458732578x1822613191.jpg" class="photo" alt="图片下载失败"><br/>
+				<img src='http://chuantu.biz/t2/33/1458732578x1822613191.jpg' class='photo' alt='图片下载失败'><br/>
 			</figure>
 		</article>
-		<article class="passage">
+		<article class='passage'>
 			<h2>最后一篇文章标题</h2>
 			<h3>文章二级标题</h3>
 			<h4>文章作者 文章发布时间</h4>
 			<p>
-				<ul class="rank">
+				<ul class='rank'>
 					<li>排名1</li>
 					<li>排名2</li>
 					<li>排名3</li>
 				</ul>
-				下面是一个表格,给表格加了一个border="1"好让你看出是一个表格
-				<table border="1">
+				下面是一个表格,给表格加了一个border='1'好让你看出是一个表格
+				<table border='1'>
 					<tr>
 						<th>表头</th>
 						<th>表头</th>
@@ -186,9 +186,9 @@
 						<td>表内容单元格</td>
 						<td>操作</td>
 					</tr>
-					<tr style="background: #CDCDCD; font-weight: bold;">
+					<tr style='background: #CDCDCD; font-weight: bold;'>
 						<td>总计</td>
-						<td colspan="2">1000</td>
+						<td colspan='2'>1000</td>
 					</tr>
 				</table>
 			</p>
