--- a/S1Task3/index.html
+++ b/S1Task3/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-    <meta charset="UTF-8">
+    <meta charset='UTF-8'>
     <title>百度IFE_TASK3</title>
-    <link href="main.css" rel="stylesheet" type="text/css"/>
+    <link href='main.css' rel='stylesheet' type='text/css'/>
 </head>
 <body>
-    <div class="father_box">
-        <div class="box_left">
-                <img src="http://chuantu.biz/t2/46/1459436226x3738746547.png" alt="图片下载失败" style="max-height: 80px;">
-                <p class="text_field">前端666菜鸟训练营</p>
+    <div class='father_box'>
+        <div class='box_left'>
+                <img src='http://chuantu.biz/t2/46/1459436226x3738746547.png' alt='图片下载失败' style='max-height: 80px;'>
+                <p class='text_field'>前端666菜鸟训练营</p>
         </div>
-        <div class="box_right">
-            <img src="http://chuantu.biz/t2/46/1459436226x3738746547.png" alt="个人LOGO" class="personal_logo">
-            <img src="http://chuantu.biz/t2/46/1459436226x3738746547.png" alt="个人LOGO" class="personal_logo">
-            <img src="http://chuantu.biz/t2/46/1459436226x3738746547.png" alt="个人LOGO" class="personal_logo">
-            <img src="http://chuantu.biz/t2/46/1459436226x3738746547.png" alt="个人LOGO" class="personal_logo">
+        <div class='box_right'>
+            <img src='http://chuantu.biz/t2/46/1459436226x3738746547.png' alt='个人LOGO' class='personal_logo'>
+            <img src='http://chuantu.biz/t2/46/1459436226x3738746547.png' alt='个人LOGO' class='personal_logo'>
+            <img src='http://chuantu.biz/t2/46/1459436226x3738746547.png' alt='个人LOGO' class='personal_logo'>
+            <img src='http://chuantu.biz/t2/46/1459436226x3738746547.png' alt='个人LOGO' class='personal_logo'>
         </div>
-        <div class="box_center">
+        <div class='box_center'>
             <p>
                 2016春季班概述一年之计在于春，经过漫长的冬季，又是开学之际，众多莘莘学子纷纷又回到校园，投入学习之中。百度前端技术学院也在此时为大家带来了一道前端学习的饕鬄盛宴。经过2年多的尝试与摸索，我们确认了实践、交流与分享，对于技术学习而言，是非常有效且高效的手段，因此，本次春季班，我们特别搭建了一个线上平台系统，通过这个系统向学员们发送编码任务，学员们在这个系统上提交作业地址，进行相互的代码评审（Code Review）与评价，同时在平台中积累自己的学习总结笔记并分享给大家。为了让大家更加有动力进行这些学习方式，我们在整个春季班的学习过程中，融入了竞赛模式，任务完成得好的，评价仔细认真的，笔记写得对他人有帮助的，我们都会通过一套积分系统来进行排名。在头一个半月的任务“闯关”之后，我们还特意安排了一个很有挑战性，能够发挥大家创新能力的大任务环节，具体任务当然暂时保密。这个终极BOSS的挑战会作为整个春季班的最终环节。
             </p>
