--- a/S2Task14/index.html
+++ b/S2Task14/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <title>IFE JavaScript S2Task14</title>
 </head>
 <body>
 
 <h3>污染城市列表</h3>
-<ul id="aqi-list">
+<ul id='aqi-list'>
 
 </ul>
 </ul>
 
-<script type="text/javascript">
+<script type='text/javascript'>
     var aqiData = [
-        ["北京", 90],
-        ["上海", 50],
-        ["福州", 10],
-        ["广州", 50],
-        ["成都", 90],
-        ["西安", 100]
+        ['北京', 90],
+        ['上海', 50],
+        ['福州', 10],
+        ['广州', 50],
+        ['成都', 90],
+        ['西安', 100]
     ];
 
     (function () {
@@ -37,8 +37,8 @@
                 }
             }
         }
-        var listValue = document.getElementById("aqi-list");
-        var showValue = "";
+        var listValue = document.getElementById('aqi-list');
+        var showValue = '';
         //输出符合任务要求的数据
         for(var i=0;i<aqiData.length-1;i++){
             if(aqiData[i][1]<60){
