--- a/S3Task37/index.html
+++ b/S3Task37/index.html
@@ -8,9 +8,8 @@
 <body>
     <div class="text">
         <a href="#" class="show_message" id="showMessage">点击此处弹出对话框</a>
-        <p>暂未实现:</p>
-        <p>1.当点击浮出层以外的部分,默认关闭浮出层</p>
-        <p>2.浮出层可以拖曳以及放大缩小</p>
+        <p>有点小BUG:</p>
+        <p>1.浮动窗口可拖曳范围有限</p>
         <p><img src="http://ww3.sinaimg.cn/large/005TbPZpgw1f32y3xbz2mg301f01fmx0.gif"></p>
         <p>test</p>
         <p>test</p>
