--- a/S1Task6/index.html
+++ b/S1Task6/index.html
@@ -36,12 +36,71 @@
             <div class="what">
                 <span>What</span><br>
                 <div class="text">
-                    前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前端前端前端前端
+                    前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前端前端前端前端段前端前段前段前端前段前段前端前段前段前端前段前段前端前段前段前端前段前段前端前段前段前端前段前段前端前段前段前端前段前段前端前段前段前端前段前段前端前段前段前端前段前段前端前段前
                 </div>
             </div>
-            <div>
-                占坑完成任务中......
+            <div class="when">
+                <span>When</span>
+                <div class="text">
+                    前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端前段前端段前端前段前段前端前段前段前端前段前段前端前段前段前端前段前段前端前段前段前端前段前段前端前段前段前端前段前段前端前段前段前端前段前段前端前段前段前端前段前段前端前段前段前端前段前前端前端前端前端
+                </div>
             </div>
+            <div class="how">
+                <span>How</span>
+                <div class="text">
+                    前段前端前段前端前段前端前段端前段前端前段前端前段前端前段前端前段前端前段前
+                </div>
+                <div class="text_text1">
+                    <p>What --------<span>40%</span></p>
+                    <p>What --------<span>30%</span></p>
+                    <p>What --------<span>30%</span></p>
+                </div>
+            </div>
+        </div>
+        <div class="left">
+            <div class="left_fbox">
+                <span class="text_1">THE</span>
+                <span class="text_2">&nbsp;TECHNOLOGE OF FRONT</span><br>
+                <span class="text_3">前端技术领域</span>
+            </div>
+            <div class="left_sbox">
+                <p class="text_4">端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端
+                    <img src="img/1.3.jpg"/>
+                    端前端前段前段前端前端前段前段前端前端前段前段前端前端前段前段前端前端前段前段前端前端前段前段前端前端前段前段前端前端前段前段前端前端前段前段前端前端前段前段前端前端前段前段前端前端前段前段前端前端
+                </p>
+                <p class="text_5">
+                    前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
+                </p>
+                <p class="text_6">
+                    端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
+                </p>
+            </div>
+        </div>
+        <div class="right">
+            <div class="right_pic">
+                <img src="img/1.2.jpg"/>
+                <div class="master">
+                    <p>前端技术<span>前端技术前端技术</span></p>
+                </div>
+            </div>
+            <div class="right_bottom">
+                <div class="right_bottom_text">
+                        <p>▲前端前端前端前端前端前端.....................<span>前端</span></p>
+                        <p>▲前端前端前端...............................<span>前端前</span></p>
+                        <p>▲前端前端前端前端前端前端前端.................<span>前端</span></p>
+                </div>
+                <div class="right_bottom_red">
+                    <span class="text1">0</span>
+                    <span class="text2">ONE TWO</span>
+                    <span class="text3">THREE FORE FIVE</span>
+                    <span class="text4">hello world hello world<br> hello world</span>
+                </div>
+                <div class="right_bottom_text2">
+                    <span>"</span>world hello world hello world hello world hello world hello world hello world hello world hello world hello world <span>"</span>
+                </div>
+
+            </div>
+
         </div>
     </div>
 </body>
